using UnityEngine;

[CreateAssetMenu(fileName = "PAK", menuName = "PAK/Collection", order = 1)]
public class PAK : ScriptableObject
{
    [Header("Walls")]
    public GameObject Tex1;
    public GameObject Tex2;
    public GameObject Tex3;
    public GameObject Tex4;
    public GameObject Tex5;
    public GameObject Tex6;
    public GameObject Tex7;
    public GameObject Tex8;
    public GameObject Tex9;
    public GameObject Tex10;
    public GameObject Tex11;
    public GameObject Tex12;
    public GameObject Tex13;
    public GameObject Tex14;
    public GameObject Tex15;
    public GameObject Tex16;
    public GameObject Tex17;
    public GameObject Tex18;
    public GameObject Tex19;
    public GameObject Tex20;
    public GameObject Tex21;
    public GameObject Tex22;
    public GameObject Tex23;
    public GameObject Tex24;
    public GameObject Tex25;
    public GameObject Tex26;
    public GameObject Tex27;
    public GameObject Tex28;
    public GameObject Tex29;
    public GameObject Tex30;
    public GameObject Tex31;
    public GameObject Tex32;
    public GameObject Tex33;
    public GameObject Tex34;
    public GameObject Tex35;
    public GameObject Tex36;
    public GameObject Tex37;
    public GameObject Tex38;
    public GameObject Tex39;
    public GameObject Tex40;
    [Header("Next level")]
    public GameObject NextLevel;
    [Header("Sprites")]
    public GameObject Sprite1;
    public GameObject Sprite2;
    public GameObject Sprite3;
    public GameObject Sprite4;
    public GameObject Sprite5;
    public GameObject Sprite6;
    public GameObject Sprite7;
    public GameObject Sprite8;
    public GameObject Sprite9;
    public GameObject Sprite10;
    [Header("Weapons")]
    public GameObject Weapon1;
    public GameObject Weapon2;
    public GameObject Weapon3;
    public GameObject Weapon4;
    public GameObject Weapon5;
    public GameObject Weapon6;
    [Header("Ammunitions")]
    public GameObject AmmoBox;
    public GameObject Medkit;
    [Header("Enemies")]
    public GameObject Enemy1;
    public GameObject Enemy2;
    public GameObject Enemy3;
    public GameObject Enemy4;
    public GameObject Enemy5;
    [Header("Door")]
    public GameObject Door;
    [Header("Player")]
    public GameObject Player;
}
